--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-clean-plugin</artifactId>
 				<version>3.0.0</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
@@ -46,8 +49,6 @@
 							<secureKey>${secureKey}</secureKey>
 						</properties>
 					</cloudHubDeployment>
-					<sharedLibraries>
-					</sharedLibraries>
 				</configuration>
 			</plugin>
 		</plugins>
